החלפת שיר, מנטה ריי, מסעות

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ Error message and password prompt
 
 <li>דינה ז&quot;ל</li>
 
-<li>דליקטסן</li>
+<li>דליקטסן אצל ז'נבייב</li>
 
 <li>דם אמיתי</li>
 
@@ -843,6 +843,8 @@ Error message and password prompt
 
 <li>מאכילים את המצפון</li>
 
+<li>מאנטה ריי</li>
+
 <li>מג'דרה</li>
 
 <li>מגבות מטבח</li>
@@ -880,6 +882,8 @@ Error message and password prompt
 <li>מנקים היטב</li>
 
 <li>מסוכנת</li>
+
+<li>מסעדות</li>
 
 <li>מספרה</li>
 
@@ -9009,11 +9013,11 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20181006133725259" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<div created="20161023184709475" modified="20181018173441384" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20181006134134830" title="$:/state/tab/sidebar--1835078512">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20161023184705203" modified="20181018181328447" title="$:/state/tab/sidebar--1835078512">
+<pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/EditorToolbar</pre>
@@ -9021,7 +9025,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[הדשא של השכן]] לחם [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מאנטה ריי]] מסעדות [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9041,7 +9045,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20181008190346681" title="$:/temp/search">
+<div created="20161023184814872" modified="20181018173813870" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10246,12 +10250,12 @@ well,
 
 </pre>
 </div>
-<div created="20170926171537258" modified="20180201142546132" tags="[[חיות אוכל]] [[קופים ממונעים]] ארוחות" title="ארוחת ראש השנה">
+<div created="20170926171537258" modified="20181018173510721" tags="[[חיות אוכל]] [[קופים ממונעים]] ארוחות" title="ארוחת ראש השנה">
 <pre>[img[pictures/aruchat-rosh-hashana.jpg]]
 
 !!![[יויו]]:
 
-ראש השנה התשע&quot;ח היה משהו. כלומר, שבסופו של דבר היה מעולה. גם ההתחלה הייתה אחלה. אבל באמצע, גורה לקתה במרמרת מסויימת. היין שהיא שתתה לא עשה טוב בעניין הזה. ז'נבייב ורוז'ה דיברו על [[המעדנייה|דליקטסן]] שעומדת להיפתח במקום [[הקוסקוס]]. השניים משוחחים בנחת על חשיבות מקור חומרי הגלם, כי בעצם ז'נבייב רוצה &quot;לעלות כיתה&quot; מהבחינה הזו. בקיצור, גורה נתנה נאום גועלי על &quot;כמה שכולכם נהייתם לי פיינשמעקרים&quot;. היא גם הסתלבטה על אירי ועלי [[והקניידלך|מרק עם קניידלך]]. &quot;כמה תרחיקו לכת? עד לאן תרוצו כדי להשיג סלק בן יומו או סרטן עם טעם של פעם? היא צרחה, קמה והלכה לחדרה. כעבור שעתיים - כשרובינו צופים [[בפרק האחרון|הסוף נשאר פתוח]] של הסופרנוס. מבסוטים על עצמינו. מבושמים מאוכל, שתייה, פינוקים [[והסידרה הסופנית|הסופרנוס]] היא הופיע מביטה בנו. חייכנו אליה כולנו, היא התיישבה בין אווה ופיליפ. היה נפלא א-לה-דובונאז'.</pre>
+ראש השנה התשע&quot;ח היה משהו. כלומר, שבסופו של דבר היה מעולה. גם ההתחלה הייתה אחלה. אבל באמצע, גורה לקתה במרמרת מסויימת. היין שהיא שתתה לא עשה טוב בעניין הזה. ז'נבייב ורוז'ה דיברו על [[המעדנייה|דליקטסן אצל ז'נבייב]] שעומדת להיפתח במקום [[הקוסקוס]]. השניים משוחחים בנחת על חשיבות מקור חומרי הגלם, כי בעצם ז'נבייב רוצה &quot;לעלות כיתה&quot; מהבחינה הזו. בקיצור, גורה נתנה נאום גועלי על &quot;כמה שכולכם נהייתם לי פיינשמעקרים&quot;. היא גם הסתלבטה על אירי ועלי [[והקניידלך|מרק עם קניידלך]]. &quot;כמה תרחיקו לכת? עד לאן תרוצו כדי להשיג סלק בן יומו או סרטן עם טעם של פעם? היא צרחה, קמה והלכה לחדרה. כעבור שעתיים - כשרובינו צופים [[בפרק האחרון|הסוף נשאר פתוח]] של הסופרנוס. מבסוטים על עצמינו. מבושמים מאוכל, שתייה, פינוקים [[והסידרה הסופנית|הסופרנוס]] היא הופיע מביטה בנו. חייכנו אליה כולנו, היא התיישבה בין אווה ופיליפ. היה נפלא א-לה-דובונאז'.</pre>
 </div>
 <div created="20170729122045070" modified="20170729204444850" tags="[[אירי טוענת]]" title="ארנון חן">
 <pre>[img[pictures/arnon-chen.jpg]]
@@ -11408,7 +11412,7 @@ different tastes, but there were things we both love: family, work, people in al
 
 אני אומנם מטופלת מכל הכוונים, אבל רק לאחרונה, אחרי [[שדןדן נסע|דןדן נסע]], יויו צילם אותי בוידאו משתוללת על [[אלפרד]], וזה נראה פויה. ממש מביך.</pre>
 </div>
-<div created="20171018115658510" modified="20180129113547468" tags="[[המטבח על פי ז'נבייב]] ארוחות" title="דליקטסן">
+<div created="20171018115658510" modified="20181018173428468" tags="[[המטבח על פי ז'נבייב]] ארוחות מסעדות" title="דליקטסן אצל ז'נבייב">
 <pre>[img[pictures/delicatessen.jpg]]
 
 !!![[ז'נבייב]]:
@@ -11575,12 +11579,12 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20180702120433551" modified="20180712143959435" tags="[[אחיות חוץ]] [[חיות אוכל]] ארוחות [[כאן בגטו]]" title="האחים">
+<div created="20180702120433551" modified="20181018173544993" tags="[[אחיות חוץ]] [[חיות אוכל]] ארוחות [[כאן בגטו]] מסעדות" title="האחים">
 <pre>[img[pictures/the-brothers.jpg]]
 
 !!![[יויו]]:
 
-[[תומר]] לקח אותנו כבר בפעמים הקודמות שביקרנו את [[אבא|אבא יואל]], לאכול [[באחים|http://www.haachim.co.il/]], וברגע שנכנסנו היה ברור שמדובר [[באחיות|שאלון האחיות]]. תמיד מלא שם באנשים שנראים מאד שמחים ונהנים, אלכוהול לא יקר יחסית לרפובליקה, צוות הכי נחמד ואדיב. יש שולחנות בחוץ על המדרכה, ובחלק הפנימי,  נמצאים שולחנות מסוגים שונים, הבר של &quot;הפס הקר&quot;  ובר המשקאות, גם סביבם אפשר לשבת. יש מוסיקה כזו כאילו שנכנסת לסרט של אמיר קוסטוריצה שפגש את [[טוני סופרנו|הסופרנוס]] רק בלי הרציחות והמכות, ואז הם הלכו להיפגש עם היווני [[מהסמויה|הסמויה]] בקטע טוב, ופגשו את אריק לביא. ממש ממש טעים שם. בשרים וירקות על האש אבל לא רק, ירקות בכל מיני צורות. אני מת על החומוס שלהם ועל הפיתות, והכי על הלבנה. ביקור אצלם תמיד נותן לי השראה כשאני חוזר [[למטבח|דליקטסן]].</pre>
+[[תומר]] לקח אותנו כבר בפעמים הקודמות שביקרנו את [[אבא|אבא יואל]], לאכול [[באחים|http://www.haachim.co.il/]], וברגע שנכנסנו היה ברור שמדובר [[באחיות|שאלון האחיות]]. תמיד מלא שם באנשים שנראים מאד שמחים ונהנים, אלכוהול לא יקר יחסית לרפובליקה, צוות הכי נחמד ואדיב. יש שולחנות בחוץ על המדרכה, ובחלק הפנימי,  נמצאים שולחנות מסוגים שונים, הבר של &quot;הפס הקר&quot;  ובר המשקאות, גם סביבם אפשר לשבת. יש מוסיקה כזו כאילו שנכנסת לסרט של אמיר קוסטוריצה שפגש את [[טוני סופרנו|הסופרנוס]] רק בלי הרציחות והמכות, ואז הם הלכו להיפגש עם היווני [[מהסמויה|הסמויה]] בקטע טוב, ופגשו את אריק לביא. ממש ממש טעים שם. בשרים וירקות על האש אבל לא רק, ירקות בכל מיני צורות. אני מת על החומוס שלהם ועל הפיתות, והכי על הלבנה. ביקור אצלם תמיד נותן לי השראה כשאני חוזר [[למטבח|דליקטסן אצל ז'נבייב]].</pre>
 </div>
 <div created="20171002200359738" modified="20180912125148988" tags="סדרות אמהות" title="האנטומיה של גריי">
 <pre>[img[pictures/greys-anatomy.jpg]]
@@ -12100,7 +12104,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161213170938039" modified="20180702173420840" tags="[[המטבח על פי ז'נבייב]] ארוחות [[חיות אוכל]]" title="הקוסקוס">
+<div created="20161213170938039" modified="20181018173329412" tags="[[המטבח על פי ז'נבייב]] ארוחות [[חיות אוכל]] מסעדות" title="הקוסקוס">
 <pre>[img[pictures/hacouscous.jpg]]
 
 !!![[אלפרד]]:
@@ -13861,6 +13865,18 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, מאכילים את המצפון קלוריות ריקות.</pre>
 </div>
+<div created="20181018172540054" modified="20181018181326223" tags="מסעדות [[כאן בגטו]] [[חיות אוכל]] [[מטא בדיון]]" title="מאנטה ריי">
+<pre>
+[img[pictures/mantaray.jpg]]
+
+!!![[אווה]]:
+
+[[כשאיריס|איריס הבת]] הייתה קטנה ממש אכלנו המון [[במאנטה ריי|http://mantaray.co.il/]] ואחר כך עברו שנים ותמיד שמחנו לחזור לשם כשהזדמן, הכל תמיד משכר ת'דעת ומשמח. אני בביקור [[בארץ|אבינו]] עכשיו, ולפני כמה ימים [[תומר]] הזמין  אותי לארוחת בוקר כאן על הים. אכלתי מר קראנצ'י ושתיתי מיצפיגוז, והיה כל כך כיף וטעים, עד שיומיים אחר כך הלכנו שוב, הפעם בשעת בין הערביים, ישבנו על המרפסת, אכלנו מאזטים ושתינו מרגריטות קפואות, והיה בדיוק כמו שכתוב באודות שבאתר: 
+
+//מאנטה ריי היא מסעדת חופים אמיתית, כמה צעדים מגלי הים אנחנו מציעים מטבח ים-תיכוני יצירתי- מאזטים משובחים, דגים ופירות ים מצוינים, עשויים באהבה ובתשוקה רבה.. //
+
+הכי גררררררררר</pre>
+</div>
 <div created="20170402193858167" modified="20180605133225529" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="מג'דרה">
 <pre>[img[pictures/mejadra-matconim.jpg]]
 
@@ -14128,6 +14144,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 רוע הלב שלה הוא בלתי נסלח, ואני רק מציע - אל תתעסקו עם הדפני!!!</pre>
 </div>
+<div created="20181018172329578" modified="20181018181111928" tags="[[חיות אוכל]]" title="מסעדות">
+<pre>[img[pictures/misadot.jpg]]
+
+!!![[הצוות]]:
+
+כי אוכל זה יאמי ומסעדות זה כיף ויפה ומעניין ובא לך להגיע במיוחד או לעצור במקרה, ולנשנש משהו.
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[מסעדות]]&quot;&gt;&gt;</pre>
+</div>
 <div created="20170507173634371" modified="20170507220735840" tags="HH" title="מספרה">
 <pre>[img[pictures/hamispara.jpg]]
 
@@ -14322,7 +14349,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, משתדלים לא להגזים עם חופש הביטוי.</pre>
 </div>
-<div created="20161114205035106" modified="20181006145935078" tags="ארוחות [[חיות אוכל]] מתכונים" title="מתכוני ארוחת הכריסמס">
+<div created="20161114205035106" modified="20181018172435414" tags="ארוחות [[חיות אוכל]] מתכונים" title="מתכוני ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -16337,7 +16364,7 @@ Fapina''
 
 ראשל היא בתה הצעירה של [[ז'נבייב]], היא ילידת שנת 2000, היא תיכוניסטית במגמת אומנות פלסטית, והיא [[ג'וקרית|ילדים חד הוריים]] אמיתית.</pre>
 </div>
-<div created="20170822191101898" modified="20171018121716080" tags="[[המטבח על פי ז'נבייב]]" title="רביזיה במטבח">
+<div created="20170822191101898" modified="20181018173611314" tags="[[המטבח על פי ז'נבייב]]" title="רביזיה במטבח">
 <pre>[img[pictures/revisia-bamitbach.jpg]]
 
 !!![[ז'נבייב]]:
@@ -16346,7 +16373,7 @@ Fapina''
 
 כנראה שדברים באמת באים בצרורות.
 [[המכתב מדןדן|שה פניס]], הגיע בדיוק בזמן מבחינתי. רציתי שינוי.
- [[הסלואו פוד|https://en.wikipedia.org/wiki/Slow_Food]] תפס אותי, כי יותר מכל קשה לי הלחץ של הסרוויס. ומבחינת הסטייל - ונכון שקוסקוס הוא למעשה סלואו פוד, אבל [[המטבח הקליפורני|https://en.wikipedia.org/wiki/California_cuisine]] דיבר אלי מבחינת החומרים. בנוסף לאלה - מתפנה חנות ליד הקוסקוס, כך שאוכל להגדיל את המקום, וזהו, החלטתי. בעוד חודש אסגור את המסעדה לשבועיים עד חודש. נתכנן מטבח נח יותר לצורת העבודה החדשה. אשאיר שולחנות ללא הגשה, ואפתח [[מעדניית סלואו פוד בהשראת המטבח הקליפורני|דליקטסן]]. מן &quot;אוסף פרטי&quot;. כמובן שיהיה קוסקוס. יש לי את [[סוניה]], את [[סולטנה]], את [[אווה]], את כל הילדים - והשיא, [[אירי]] [[ויויו|יויו]] החליטו להכין [[מרק עם קניידלך]].
+ [[הסלואו פוד|https://en.wikipedia.org/wiki/Slow_Food]] תפס אותי, כי יותר מכל קשה לי הלחץ של הסרוויס. ומבחינת הסטייל - ונכון שקוסקוס הוא למעשה סלואו פוד, אבל [[המטבח הקליפורני|https://en.wikipedia.org/wiki/California_cuisine]] דיבר אלי מבחינת החומרים. בנוסף לאלה - מתפנה חנות ליד הקוסקוס, כך שאוכל להגדיל את המקום, וזהו, החלטתי. בעוד חודש אסגור את המסעדה לשבועיים עד חודש. נתכנן מטבח נח יותר לצורת העבודה החדשה. אשאיר שולחנות ללא הגשה, ואפתח [[מעדניית סלואו פוד בהשראת המטבח הקליפורני|דליקטסן אצל ז'נבייב]]. מן &quot;אוסף פרטי&quot;. כמובן שיהיה קוסקוס. יש לי את [[סוניה]], את [[סולטנה]], את [[אווה]], את כל הילדים - והשיא, [[אירי]] [[ויויו|יויו]] החליטו להכין [[מרק עם קניידלך]].
 
 
 
@@ -16684,7 +16711,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170821183123825" modified="20170824135557111" tags="[[דןדן נסע]]" title="שה פניס">
+<div created="20170821183123825" modified="20181018173816288" tags="[[דןדן נסע]] מסעדות [[חיות אוכל]]" title="שה פניס">
 <pre>!!![[יויו]]:
 
 כן - [[הוא|דןדן]] כתב לנו עוד מכתב (אוגוסט 2017), וגם אותו אני מעתיק לכאן:
