--- a/index.html
+++ b/index.html
@@ -9016,8 +9016,8 @@ Error message and password prompt
 <div created="20161023184709475" modified="20181018173441384" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20181018181328447" title="$:/state/tab/sidebar--1835078512">
-<pre>$:/core/ui/SideBar/More</pre>
+<div created="20161023184705203" modified="20181018181701526" title="$:/state/tab/sidebar--1835078512">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/EditorToolbar</pre>
@@ -9025,7 +9025,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מאנטה ריי]] מסעדות [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -13866,8 +13866,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, מאכילים את המצפון קלוריות ריקות.</pre>
 </div>
 <div created="20181018172540054" modified="20181018181326223" tags="מסעדות [[כאן בגטו]] [[חיות אוכל]] [[מטא בדיון]]" title="מאנטה ריי">
-<pre>
-[img[pictures/mantaray.jpg]]
+<pre>[img[pictures/mantaray.jpg]]
 
 !!![[אווה]]:
 
