--- a/index.html
+++ b/index.html
@@ -9013,10 +9013,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20181018173441384" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Missing</pre>
+<div created="20161023184709475" modified="20181018192456597" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20181018181701526" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20181018192835702" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9025,7 +9025,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="בתים [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9045,7 +9045,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20181018173813870" title="$:/temp/search">
+<div created="20161023184814872" modified="20181018193358074" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10460,10 +10460,14 @@ Is where I want to be
 
 [[חנות הפרחים|http://bishvil-haprachim.co.il/]] המתוקה והיפה ביותר עם הפרחים והסידורים והכלים היפים ביותר בעיר כולה.</pre>
 </div>
-<div created="20180704182012305" modified="20180712143757520" tags="" title="בתים">
+<div created="20180704182012305" modified="20181018193950764" tags="" title="בתים">
 <pre>[img[pictures/batim.jpg]]
 
 !!![[הצוות]]:
+
+[[בבית, זה איפה שאני רוצה להיות, אך אני מניח שאני כבר שם|https://www.youtube.com/watch?v=cUEiMQfSrZw]]
+
+[[דיוויד ביירן]]
 
 
 
@@ -11859,7 +11863,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170206170428832" modified="20180128154422752" tags="[[הנחלה בה גדלתי]] ארוחות" title="המטבח של הנחלה">
+<div created="20170206170428832" modified="20181018192739794" tags="[[הנחלה בה גדלתי]] ארוחות מסעדות" title="המטבח של הנחלה">
 <pre>[img[pictures/hamitbach-shel-hanachala.jpg]]
 
 !!![[אווה]]:
@@ -16280,7 +16284,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170119232802609" modified="20180409153937324" tags="HH" title="קפה מילר">
+<div created="20170119232802609" modified="20181018192827237" tags="HH מסעדות [[חיות אוכל]]" title="קפה מילר">
 <pre>[img[pictures/cafe-muller.jpg]]
 
 !!![[גורה]]:
