--- a/index.html
+++ b/index.html
@@ -315,6 +315,8 @@ Error message and password prompt
 
 <li>אורז לבן עם צנוברים</li>
 
+<li>אחוזת דאונטון</li>
+
 <li>אחות כהן</li>
 
 <li>אחיות חוץ</li>
@@ -333,6 +335,8 @@ Error message and password prompt
 
 <li>אימא, סבתא ואני</li>
 
+<li>אימהות</li>
+
 <li>אירי</li>
 
 <li>אירי וגורה</li>
@@ -350,8 +354,6 @@ Error message and password prompt
 <li>אלן בול</li>
 
 <li>אלפרד</li>
-
-<li>אמהות</li>
 
 <li>אנג'ליק</li>
 
@@ -9013,10 +9015,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20181018192456597" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<div created="20161023184709475" modified="20181020142343275" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20181018192835702" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20181020142344771" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9025,7 +9027,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="בתים [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מאנטה ריי]] [[אחוזת דאונטון]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9045,7 +9047,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20181018193358074" title="$:/temp/search">
+<div created="20161023184814872" modified="20181020121030904" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9432,7 +9434,7 @@ well,
 
 </pre>
 </div>
-<div created="20161215192348716" modified="20180201220644711" tags="[[אחות כהן]] אמהות" title="אווה כהן">
+<div created="20161215192348716" modified="20181020120521996" tags="[[אחות כהן]] אימהות" title="אווה כהן">
 <pre>[img[pictures/7h68QEIPyKEHEZ8B.jpg]]
 
 
@@ -9853,6 +9855,14 @@ well,
 
 את הצנוברים הקלויים מפזרים מעל, ואפשר לפזר גם עשבי תיבול קצוצים.</pre>
 </div>
+<div created="20181020104051284" modified="20181020143855493" tags="סדרות אימהות" title="אחוזת דאונטון">
+<pre>[img[pictures/downton-abbey.jpg]]
+
+!!![[גורה]]:
+
+כל בית צריך אימא אוהבת, מקבלת ומסייעת, [[ובאחוזת דאונטון|https://www.imdb.com/title/tt1606375/?ref_=nv_sr_1]] הענקית שתי אימהות נהדרות. קורה, [[האימא המלאכית|https://www.imdb.com/name/nm0001527/?ref_=tt_cl_t9]] של מעלה, ורוז, [[האימא הכי בעולם|https://www.imdb.com/name/nm0517642/?ref_=ttfc_fc_cl_i8]] של מטה. הן שתיהן דואגות לסדר את הדברים שקורים בשום וטוב לב, כי דמויות רבות מתגוררות באחוזה ועוד רבות מגיעות לבקרה.
+מהתצלום [[הזה|http://d2buyft38glmwk.cloudfront.net/media/__sized/images/canonical/downton-abbey-s6-house-trivia-1920x1080-scale-800x600.jpg]] ציירתי את האחוזה, והדמות הצועדת בה היא [[הרוזנת האלמנה ויולט קרולי|https://www.imdb.com/name/nm0001749/?ref_=tt_cl_t12]], אחת הדמויות האדירות, למרות שהיא יצאה קצת יותר כמו [[איזבל קרולי|https://www.imdb.com/name/nm0934362/?ref_=ttfc_fc_cl_t13]], דמות נפלאה גם כן. אבל מה עם [[דייזי|https://www.imdb.com/name/nm2904789/?ref_=ttfc_fc_cl_t10]] ההולכת ופורחת, [[מיסטר מוזלי|https://www.imdb.com/name/nm0236413/?ref_=ttfc_fc_cl_t14]] הנפלא, [[גברת פטמור|https://www.imdb.com/name/nm0630149/?ref_=ttfc_fc_cl_t11]] הבובה, [[ברנסון|https://www.imdb.com/name/nm1395602/?ref_=ttfc_fc_cl_t15]] המענטש, [[ליידי מרי|https://www.imdb.com/name/nm1890784/?ref_=ttfc_fc_cl_t5]] הקרה והרגישה בדרכה, [[ליידי אדית'|https://www.imdb.com/name/nm3882295/?ref_=ttfc_fc_cl_t2]] מלאת האהבה והכעסים, [[האבא|https://www.imdb.com/name/nm0095017/?ref_=tt_cl_t1]] של מעלה השמרן המתגמש, [[האבא|https://www.imdb.com/name/nm0141697/?ref_=ttfc_fc_cl_t3]] של מטה שאט מתרכך מעט, [[בייט'ס|https://www.imdb.com/name/nm0185354/?ref_=ttfc_fc_cl_t4]] הגבר, [[אנה|https://www.imdb.com/name/nm0296219/?ref_=ttfc_fc_cl_t6]] האישה, [[תומאס|https://www.imdb.com/name/nm1674947/?ref_=tt_cl_t7]] והזעם ??? קשה לי להפסיק כי שימת הלב לדקויות הנפש האנושית והתפתחותה היא סוף כל הסופים שמשוחק מוש. מחיאות כפיים סוערות.</pre>
+</div>
 <div created="20170423214419764" modified="20180814110815597" tags="[[קופים ממונעים]] [[אני רוצה להתנצל]] חבר" title="אחות כהן">
 <pre>[img[pictures/achot-coen.jpg]]
 
@@ -9916,7 +9926,7 @@ well,
 
 </pre>
 </div>
-<div created="20170616194246231" modified="20180130192127531" tags="[[סיפורים אמיתיים]] אמהות" title="אימא מהאגדות">
+<div created="20170616194246231" modified="20181020120539190" tags="[[סיפורים אמיתיים]] אימהות" title="אימא מהאגדות">
 <pre>[img[pictures/ima-mehaagadot.jpg]]
 
 !!![[אנג'ליק]]:
@@ -9935,7 +9945,7 @@ well,
 
 </pre>
 </div>
-<div created="20170505164125282" modified="20180130192357320" tags="[[סיפורים אמיתיים]] אמהות" title="אימא שלי">
+<div created="20170505164125282" modified="20181020120556384" tags="[[סיפורים אמיתיים]] אימהות" title="אימא שלי">
 <pre>[img[pictures/ima-sheli-iri.jpg]]
 
 !!![[אירי]]:
@@ -9954,6 +9964,14 @@ well,
 
 
 זאת דנה. והיא כתבה את הסיפורים הללו לפני.</pre>
+</div>
+<div created="20180130191838651" modified="20181020121102225" tags="הצוות [[קופים ממונעים]]" title="אימהות">
+<pre>[img[pictures/imahot.jpg]]
+
+
+כל אחד וכל דבר צריך אימא. יש אימהות שזה אחלה, ויש אימהות [[שזה גדול|https://www.youtube.com/watch?v=QnAoG1e0hDw]]
+
+&lt;&lt;list-links filter:&quot;[tag[אימהות]]&quot;&gt;&gt;</pre>
 </div>
 <div created="20161206200127567" modified="20180201220557625" tags="[[אחות כהן]]" title="אירי">
 <pre>[img[pictures/iri.jpg]]
@@ -10072,15 +10090,6 @@ well,
 
 
 </pre>
-</div>
-<div created="20180130191838651" modified="20180605160638651" tags="הצוות [[קופים ממונעים]]" title="אמהות">
-<pre>[img[pictures/imahot.jpg]]
-
-
-
- אמהות זה אחלה, [[זה גדול|https://www.youtube.com/watch?v=QnAoG1e0hDw]]
-
-&lt;&lt;list-links filter:&quot;[tag[אמהות]]&quot;&gt;&gt;</pre>
 </div>
 <div created="20161115215016493" modified="20180324133828326" tags="[[אחות כהן]]" title="אנג'ליק">
 <pre>[img[pictures/angelic.jpg]]
@@ -10473,7 +10482,7 @@ Is where I want to be
 
 &lt;&lt;list-links filter:&quot;[tag[בתים]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20171207221132771" modified="20180704182546037" tags="אמהות בתים" title="ג'ו ונורמה">
+<div created="20171207221132771" modified="20181020120612545" tags="בתים אימהות" title="ג'ו ונורמה">
 <pre>[img[pictures/jo-ve-norma.jpg]]
 
 !!![[אווה]]:
@@ -10596,7 +10605,7 @@ Is where I want to be
 כמו כן היא סבורה, שגם המנעד הג'נדריאלי ההולך ומתרחב, קשור לחיים כאן [[בגלות|גלות]].
 </pre>
 </div>
-<div created="20170619141108783" modified="20180410113509750" tags="[[סיפורים אמיתיים]] אמהות" title="גואן אופנה">
+<div created="20170619141108783" modified="20181020120627635" tags="[[סיפורים אמיתיים]] אימהות" title="גואן אופנה">
 <pre>[img[pictures/guen-inn-mitpara.jpg]]
 
 !!![[גואן יין]]:
@@ -11327,7 +11336,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20180715194223602" modified="20180722161427092" tags="[[כאן בגטו]] [[חיות אוכל]]" title="גרציאני">
+<div created="20180715194223602" modified="20181018194154063" tags="[[כאן בגטו]] [[חיות אוכל]]" title="גרציאני">
 <pre>[img[pictures/grasyani.jpg]]
 
 !!![[תומר]]:
@@ -11399,7 +11408,7 @@ different tastes, but there were things we both love: family, work, people in al
 
 דיור מוגז [[שבמצפה ראשית|מצפה ראשית]], הוא הפנינה, שהגיעה תודות לצינור של [[אסדת טתיס|ים טתיס]].</pre>
 </div>
-<div created="20170415105944150" modified="20180130192105418" tags="[[משפחת באומן]] אמהות" title="דינה ז&quot;ל">
+<div created="20170415105944150" modified="20181020120642484" tags="[[משפחת באומן]] אימהות" title="דינה ז&quot;ל">
 <pre>[img[pictures/ima-shel-gura.jpg]]
 
 !!![[גורה]]:
@@ -11453,7 +11462,7 @@ different tastes, but there were things we both love: family, work, people in al
 
 </pre>
 </div>
-<div created="20170112183255462" modified="20180704183509332" tags="אמהות [[סיפורים אמיתיים]] בתים" title="דןדן נסע">
+<div created="20170112183255462" modified="20181020120701023" tags="[[סיפורים אמיתיים]] בתים אימהות" title="דןדן נסע">
 <pre>[img[pictures/dandan-nasa.jpg]]
 
 !!![[אירי]]:
@@ -11590,7 +11599,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 [[תומר]] לקח אותנו כבר בפעמים הקודמות שביקרנו את [[אבא|אבא יואל]], לאכול [[באחים|http://www.haachim.co.il/]], וברגע שנכנסנו היה ברור שמדובר [[באחיות|שאלון האחיות]]. תמיד מלא שם באנשים שנראים מאד שמחים ונהנים, אלכוהול לא יקר יחסית לרפובליקה, צוות הכי נחמד ואדיב. יש שולחנות בחוץ על המדרכה, ובחלק הפנימי,  נמצאים שולחנות מסוגים שונים, הבר של &quot;הפס הקר&quot;  ובר המשקאות, גם סביבם אפשר לשבת. יש מוסיקה כזו כאילו שנכנסת לסרט של אמיר קוסטוריצה שפגש את [[טוני סופרנו|הסופרנוס]] רק בלי הרציחות והמכות, ואז הם הלכו להיפגש עם היווני [[מהסמויה|הסמויה]] בקטע טוב, ופגשו את אריק לביא. ממש ממש טעים שם. בשרים וירקות על האש אבל לא רק, ירקות בכל מיני צורות. אני מת על החומוס שלהם ועל הפיתות, והכי על הלבנה. ביקור אצלם תמיד נותן לי השראה כשאני חוזר [[למטבח|דליקטסן אצל ז'נבייב]].</pre>
 </div>
-<div created="20171002200359738" modified="20180912125148988" tags="סדרות אמהות" title="האנטומיה של גריי">
+<div created="20171002200359738" modified="20181020120716273" tags="סדרות אימהות" title="האנטומיה של גריי">
 <pre>[img[pictures/greys-anatomy.jpg]]
 
 !!![[יויו]]:
@@ -12013,7 +12022,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 הבוקר אני חושבת, בכל אחד מאיתנו [[שוכן מאפיונר קטן ומסוכן, נפוליאון החזיר, ( בעיקר בדקה 3:40 של הוידאו ואילך), שלא רואה בעיניים, גם כשהוא מלא בתובנות|https://www.youtube.com/watch?v=4zFM00-rOMo]], ושהסוף הסגור הוא, [[שג'יימס גנדולפיני|ג'יימס גנדולפיני]] האהוב כבר לא איתנו.</pre>
 </div>
-<div created="20170826115226554" modified="20180130192516726" tags="סדרות אמהות" title="הסופרנוס">
+<div created="20170826115226554" modified="20181020120730721" tags="סדרות אימהות" title="הסופרנוס">
 <pre>[img[pictures/the-sopranos.jpg]]
 
 !!![[אנג'ליק]]:
@@ -12206,7 +12215,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אני אוהבת את [[וס אנדרסון|http://www.imdb.com/name/nm0027572/]], כי תמיד הוא מצחיק אותי, ומשמח אותי. כל פריים שלו כמעט מפתיע, מלא דימיון, יפה, חכם וסימטרי - שזה הכי חשוב.</pre>
 </div>
-<div created="20161112221314170" modified="20180130192238171" tags="[[אחות כהן]] אמהות" title="ז'נבייב">
+<div created="20161112221314170" modified="20181020120746571" tags="[[אחות כהן]] אימהות" title="ז'נבייב">
 <pre>[img[pictures/genevieve.jpg]]
 ''
 המתוקה''
@@ -13406,7 +13415,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170624104950750" modified="20180604194333198" tags="מתכונים אמהות" title="כשהם ישנים">
+<div created="20170624104950750" modified="20181020120818966" tags="מתכונים אימהות" title="כשהם ישנים">
 <pre>[img[pictures/kesheatem-yeshenim.jpg]]
 
 !!![[אווה]]:
@@ -13869,16 +13878,18 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, מאכילים את המצפון קלוריות ריקות.</pre>
 </div>
-<div created="20181018172540054" modified="20181018181326223" tags="מסעדות [[כאן בגטו]] [[חיות אוכל]] [[מטא בדיון]]" title="מאנטה ריי">
+<div created="20181018172540054" modified="20181020142324163" tags="מסעדות [[כאן בגטו]] [[חיות אוכל]] [[מטא בדיון]] אימהות" title="מאנטה ריי">
 <pre>[img[pictures/mantaray.jpg]]
 
 !!![[אווה]]:
 
-[[כשאיריס|איריס הבת]] הייתה קטנה ממש אכלנו המון [[במאנטה ריי|http://mantaray.co.il/]] ואחר כך עברו שנים ותמיד שמחנו לחזור לשם כשהזדמן, הכל תמיד משכר ת'דעת ומשמח. אני בביקור [[בארץ|אבינו]] עכשיו, ולפני כמה ימים [[תומר]] הזמין  אותי לארוחת בוקר כאן על הים. אכלתי מר קראנצ'י ושתיתי מיצפיגוז, והיה כל כך כיף וטעים, עד שיומיים אחר כך הלכנו שוב, הפעם בשעת בין הערביים, ישבנו על המרפסת, אכלנו מאזטים ושתינו מרגריטות קפואות, והיה בדיוק כמו שכתוב באודות שבאתר: 
+באודות [[שבאתר|http://mantaray.co.il/]] המסעדה כתוב:
 
-//מאנטה ריי היא מסעדת חופים אמיתית, כמה צעדים מגלי הים אנחנו מציעים מטבח ים-תיכוני יצירתי- מאזטים משובחים, דגים ופירות ים מצוינים, עשויים באהבה ובתשוקה רבה.. //
+//מאנטה ריי היא מסעדת חופים אמיתית, כמה צעדים מגלי הים אנחנו מציעים מטבח ים-תיכוני יצירתי- מאזטים משובחים, דגים ופירות ים מצוינים, עשויים באהבה ובתשוקה רבה.. //   ורצוי להוסיף - מאנטה ריי היא מסעדה עם [[אימא כמו שצריך|https://www.rest.co.il/magazine/article/16206/]].
 
-הכי גררררררררר</pre>
+אני בביקור [[אצל אבא|אבינו]] עכשיו, ולפני כמה ימים [[תומר]] הפתיע  אותי והלכנו לארוחת בוקר כאן על הים, מקום בו לא ביקרתי מזמן. אכלתי מר קראנצ'י ושתיתי מיצפיגוז, והיה פיגוזי כל כך, עד שיומיים אחר כך הלכנו שוב, הפעם בשעת בין הערביים, ישבנו על המרפסת, אכלנו מאזטים עם לחם בלקאני, ושתינו מרגריטות קפואות. היה הרבה יותר טוב מטוב  וממה שכתוב באודות שבאתר.
+
+הכי גררררררררר שיש</pre>
 </div>
 <div created="20170402193858167" modified="20180605133225529" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="מג'דרה">
 <pre>[img[pictures/mejadra-matconim.jpg]]
@@ -14202,7 +14213,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 ''
 חברה טובה''</pre>
 </div>
-<div created="20170225214818327" modified="20180130192428244" tags="אמהות" title="מריאן">
+<div created="20170225214818327" modified="20181020120916693" tags="אימהות" title="מריאן">
 <pre>[img[pictures/marian.jpg]]
 
 !!![[גורה]]:
@@ -14409,7 +14420,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 האחות הבכורה והביולוגית של גורה ושלי.</pre>
 </div>
-<div created="20180202172446720" modified="20180316181547400" tags="אמהות [[אחות כהן]] הצוות" title="נולדנו">
+<div created="20180202172446720" modified="20181020120930837" tags="[[אחות כהן]] הצוות אימהות" title="נולדנו">
 <pre>[img[pictures/noladnu.jpg]]
 
 
@@ -14494,7 +14505,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170820171314166" modified="20180130192337965" tags="[[המטבח על פי ז'נבייב]] אמהות" title="סולטנה">
+<div created="20170820171314166" modified="20181020120945593" tags="[[המטבח על פי ז'נבייב]] אימהות" title="סולטנה">
 <pre>[img[pictures/sultana.jpg]]
 
 !!![[יויו]]:
@@ -14531,7 +14542,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170331195529688" modified="20180130192315266" tags="[[אחות כהן]] אמהות" title="סוניה">
+<div created="20170331195529688" modified="20181020120958665" tags="[[אחות כהן]] אימהות" title="סוניה">
 <pre>[img[pictures/sonya.jpg]]
 
 !!![[גורה]]:
@@ -15650,7 +15661,7 @@ __אופן ההכנה____
 
 וכולם נהנים מאד.</pre>
 </div>
-<div created="20180201131829444" modified="20180201140758601" tags="[[אחיות חוץ]] אמהות" title="פדרו אלמודובר">
+<div created="20180201131829444" modified="20181020121014754" tags="[[אחיות חוץ]] אימהות" title="פדרו אלמודובר">
 <pre>[img[pictures/pedro-almodovar.jpg]]
 
 !!![[גורה]]:
