--- a/index.html
+++ b/index.html
@@ -1059,6 +1059,8 @@ Error message and password prompt
 
 <li>פפינה</li>
 
+<li>פרינס</li>
+
 <li>צ'ילי כמו קארנה</li>
 
 <li>צ'ן</li>
@@ -9018,7 +9020,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20181020142343275" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20181020142344771" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20181021144507238" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9027,7 +9029,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מאנטה ריי]] [[אחוזת דאונטון]]" title="$:/StoryList">
+<div list="פרינס [[מאנטה ריי]] מסעדות [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -16006,6 +16008,15 @@ Fapina''
 
 
 </pre>
+</div>
+<div created="20181021143810622" modified="20181021150456298" tags="[[אחיות חוץ]] מוזיקה" title="פרינס">
+<pre>
+[img[pictures/prince.jpg]]
+
+!!![[הצוות]]:
+
+
+[[גשם סגול, גשם סגול|https://www.youtube.com/watch?v=TvnYmWpD_T8]]. [[זו התמונה|https://www.billboard.com/files/styles/article_main_image/public/media/do-not-reuse-bb36only-prince-purple-rain-1984-richard-e-aaron-mptv-billboard-650.jpg]]. היום הוא יום השנה וחצי למותו של [[פרינס|https://he.wikipedia.org/wiki/%D7%A4%D7%A8%D7%99%D7%A0%D7%A1]], ינוח על משכבו בשלום. בגעגוע [[למוזיקולוגיה הייחודית|https://www.youtube.com/watch?v=zILabWVdIMs]].  כן, לפעמים נזכרים באוקטובר, [[שלפעמים יורד שלג באפריל|https://www.youtube.com/watch?v=uGzXiK8_KU8]].</pre>
 </div>
 <div created="20180429154850092" modified="20180605132359869" tags="[[למה הדבר דומה]] [[מתכונים טבעוניים]] [[חיות אוכל]] מתכונים" title="צ'ילי כמו קארנה">
 <pre>[img[pictures/chilli-cmo-karne.jpg]]
