--- a/index.html
+++ b/index.html
@@ -9029,7 +9029,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="פרינס [[מאנטה ריי]] מסעדות [[האחיות כהן]]" title="$:/StoryList">
+<div list="אימהות לחם פרינס [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9967,11 +9967,11 @@ well,
 
 זאת דנה. והיא כתבה את הסיפורים הללו לפני.</pre>
 </div>
-<div created="20180130191838651" modified="20181020121102225" tags="הצוות [[קופים ממונעים]]" title="אימהות">
+<div created="20180130191838651" modified="20181022183919798" tags="הצוות [[קופים ממונעים]]" title="אימהות">
 <pre>[img[pictures/imahot.jpg]]
 
 
-כל אחד וכל דבר צריך אימא. יש אימהות שזה אחלה, ויש אימהות [[שזה גדול|https://www.youtube.com/watch?v=QnAoG1e0hDw]]
+ יש אימהות שזה אחלה, ויש אימהות [[שזה גדול|https://www.youtube.com/watch?v=QnAoG1e0hDw]]
 
 &lt;&lt;list-links filter:&quot;[tag[אימהות]]&quot;&gt;&gt;</pre>
 </div>
@@ -16010,8 +16010,7 @@ Fapina''
 </pre>
 </div>
 <div created="20181021143810622" modified="20181021150456298" tags="[[אחיות חוץ]] מוזיקה" title="פרינס">
-<pre>
-[img[pictures/prince.jpg]]
+<pre>[img[pictures/prince.jpg]]
 
 !!![[הצוות]]:
 
