--- a/index.html
+++ b/index.html
@@ -745,6 +745,8 @@ Error message and password prompt
 
 <li>כישורים חברתיים</li>
 
+<li>כל הכבוד</li>
+
 <li>כמולונז</li>
 
 <li>כרבולת בבית החזה</li>
@@ -9029,7 +9031,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כל הכבוד]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -13290,6 +13292,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 מאחר שאנחנו כולנו, [[בין השאר|על הספקטרום]], נוער בסיכון על הרצף האספרגריסטי, אנחנו לומדים יחדיו כיצד להתמודד עם מצבים בלתי צפויים בחיים, כמו שאלות שמשאירות אותך הלום. 
 
 תשובה ראשונה בסיסית היא: &quot;אני אחשוב על זה&quot;. משפט שבתקופה של שיפוץ הדירה, הפך למטבע לשון אצלנו.</pre>
+</div>
+<div created="20181022212034322" modified="20181022212048351" tags="" title="כל הכבוד">
+<pre>כל</pre>
 </div>
 <div created="20180416185136170" modified="20180605131548272" tags="[[מתכונים טבעוניים]] [[חיות אוכל]] הצוות [[למה הדבר דומה]] מתכונים" title="כמולונז">
 <pre>[img[pictures/cmolonez.jpg]]
